# billiard

./: .gitignore  CBilliard.cxx  CBilliard.hxx  CMakeLists.txt  CMatrix.cxx  CMatrix.hxx  COpenAL.cxx  COpenAL.hxx  COpenGL.cxx  COpenGL.hxx  CVector.cxx  CVector.hxx  Makefile  README.md  compile_flags.txt  main.cpp  main.h
src/: Billiard.cpp  Billiard.hpp  CBilliard.cpp  CBilliard.hpp  CMatrix.cpp  CMatrix.hpp  COpenAL.cpp  COpenAL.cxx  COpenAL.hpp  COpenAL.hxx  COpenGL.cpp  COpenGL.cxx  COpenGL.hpp  Matrix.cpp  Matrix.hpp  OpenAL.cpp  OpenAL.hpp  OpenGL.cpp  OpenGL.hpp  main.cpp  main.h  sound.cpp  sound.hpp
tools/: Dockerfile  build.sh  build_docker.sh  format_code.sh  full_build.sh
